<resources>
    <string name="app_name">k-cm</string>
    <string name="register">등록</string>
    <string name="retrieve">조회</string>
    <string name="save">저장</string>
    <string name="upload_complete">업로드 완료</string>
    <string name="upload_failed">업로드 실패</string>
    <string name="load_failed">데이터를 읽어 올 수 없습니다.</string>
    <string name="okay">확인</string>
    <string name="uploading">업로드 중</string>
    <string name="loading">로딩중</string>
    <string name="deleting">삭제중</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="modifying">수정중</string>
    <string name="modify_complete">수정 완료</string>
    <string name="modify_fail">수정 실패</string>
    <string name="change">변환</string>
    <string name="select_cancel">선택취소</string>
    <string name="select_change">선택변환</string>
    <string name="delete_success">삭제되었습니다.</string>
    <string name="delete_confirm">삭제하시겠습니까?</string>
    <string name="deleting_fail">삭제에 실패하였습니다.</string>
    <string name="cancel">취소</string>
    <string name="saving">저장중</string>
    <string name="company_name">업 체 명</string>
    <string name="accident_date">발생 일자</string>
    <string name="construction_type">공사 종류</string>
    <string name="construction_type_specific">공사 종류\n(상세)</string>
    <string name="expect_start_date">공사시작\n예정일</string>
    <string name="expect_start_date_no_enter">공사시작 예정일</string>
    <string name="expect_end_date">공사완료\n예정일</string>
    <string name="expect_end_date_no_enter">공사완료 예정일</string>
    <string name="real_start_date">실제\n시작일</string>
    <string name="real_start_date_no_enter">실제 시작일</string>
    <string name="real_end_date">실제\n완료일</string>
    <string name="real_end_date_no_enter">실제 완료일</string>
    <string name="delay_cause">지연 원인</string>
    <string name="delay_cause_specific">지연 원인\n(상세)</string>
    <string name="save_path">저장 경로</string>
    <string name="design_change_and_error">설계 변경 및 오류</string>
    <string name="contract_change_and_violation">계약 변경 및 위반</string>
    <string name="picture_describe">사진 설명</string>
    <string name="inevitable_clause">불가항적 조항</string>
    <string name="concurrent_occurrence">동시지연 발생</string>
    <string name="image_fail">이미지를 불러오는것에 실패했습니다.</string>
    <string name="error_same_delay_cause">지연원인이 동일합니다.</string>
    <string name="input_place">입력란</string>
    <string name="input_all_waring">전체 항목을 입력하셨는지 확인해주세요.</string>
    <string name="input_picture_waring">사진을 1장이상 첨부해주세요.</string>
    <string name="time_faster_than_before_warning">실제완료일이 실제시작일 보다 빠르거나 같을 수 없습니다.</string>
    <string name="expect_time_faster_than_before_warning">예정 완료일이 예정 시작일 보다 빠르거나 같을 수 없습니다.</string>
    <string name="saved_failed">저장에 실패했습니다.</string>
    <string name="need_write_permission_title">쓰기 권한</string>
    <string name="select">선택</string>
    <string name="select_gallery_or_photo">갤러리 또는 카메라를 선택해주세요.</string>
    <string name="save_file_excel">엑셀파일로 변환하시겠습니까?</string>
    <string name="send_at_email">이메일로 보내겠습니까?</string>
    <string name="delete_image">이미지 삭제</string>
    <string name="ask_delete_image">이미지를 삭제하시겠습니까?</string>
    <string name="need_write_permission">해당 기능을 사용하기 위해 쓰기 권한이 필요합니다.</string>
    <string name="choose">선택</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="image_cancel">취소 되었습니다.</string>
    <string name="image_over_select_warning">장 이상 선택하실 수 없습니다.</string>
    <string name="none">없음</string>
    
    <string name="excel_company_name">업체명</string>
    <string name="excel_accident_date">발생일자</string>
    <string name="excel_construct_type">공사종류</string>
    <string name="excel_delay_cause_one">지연원인1</string>
    <string name="excel_delay_cause_two">지연원인2</string>
    <string name="excel_expect_start_date">공사시작예정일</string>
    <string name="excel_expect_end_date">공사완료예정일</string>
    <string name="excel_real_start_date">실제시작일</string>
    <string name="excel_real_end_date">실제완료일</string>
</resources>
