<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="20"
    android:background="@drawable/bg_gray7_rectangle">

    <LinearLayout
        android:id="@+id/report_linear_layout"
        android:layout_weight="18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/report_company_name_text_view"
            tools:text="company name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/construction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/report_construction_type_text_view"
            tools:text="construction type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/delay_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/report_delay_cause_one_text_view"
            tools:text="construction type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/delay_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/report_delay_cause_two_text_view"
            tools:text="construction type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/real_start_date_no_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/report_real_start_text_view"
            tools:text="construction type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/real_end_date_no_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/report_real_end_text_view"
            tools:text="construction type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_select_linear_layout"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/report_select_radio_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>